Version 3.xxx (October xxth 2017)
- Implemented: Adjustment Value for Counter/Incremental sensors
- Implemented: Camera, can now handle HTTPS url's
- Implemented: Catalan language support (Big thanks to "delfisastre")
- Implemented: Counter sensors now have a working week chart
- Implemented: Denkovi Smartden IP In (32) with LAN Interface
- Implemented: Email, option to disable email
- Implemented: Persian language support (Big tankgs to "foademadi", "maziar.hafezi" and "reza.hadipour2002")
- Implemented: Pusher now supports Distance type
- Implemented: "Send Triggers to IFTTT" from lua using commandArray['TriggerIFTTT']='EventName#Value1#Value2#Value3'
- Implemented: 'Styles' folder can have its own images folder to overwrite stock images
- Implemented: ZWave, now displays if a node is a ZWave+ node
- Changed: MySensors, now treating V_LIGHT_LEVEL as Perecentage (V_LEVEL with type=S_LIGHT_LEVEL = Lux)
- Changed: OZW, added FGS 213/223 with id 2000/3000 as binary switch
- Fixed: Blyss (manual adding to system)
- Fixed: Floorplan door contact type
- Implemented: dzVents 2.4.3: See dzVents/documentation/history.md

Version 3.8153 (July 30th 2017)
- Fixed: Camera Editor, will now always refresh thumbnail in table
- Fixed: Devices could become invisible when a scene/group was added to the 'hidden devices' room plan with the same idx
- Fixed: JSon float/nan value, solved by upgrading JSonCPP
- Fixed: OZW, when a value is updated and the sensor did not exists before (for example a kWh sensor), it is created (saves a restart)
- Fixed: Daemonize compatible with Systemd forking type
- Changed: Blinds T5 till T13 new DeviceID generation, could cause new sensors
- Changed: Lessen rounding errors for computed energy
- Changed: Minimized On/Off/Script execution time
- Changed: SolarEdgeAPI, now only needs API Key
- Changed: Support symlinks for plugin and theme directories
- Changed: Switch type 'Door Lock' renamed to 'Door Contact'