@@ -1,4 +1,4 @@
-Version 3.xxx (October xxth 2017)
+Version 3.xxx (May xxth 2018)
 - Implemented: Adjustment Value for Counter/Incremental sensors
 - Implemented: Camera, can now handle HTTPS url's
 - Implemented: Catalan language support (Big thanks to "delfisastre")
@@ -15,6 +15,9 @@ Version 3.xxx (October xxth 2017)
 - Fixed: Blyss (manual adding to system)
 - Fixed: Floorplan door contact type
 - Implemented: dzVents 2.4.3: See dzVents/documentation/history.md
+- Implemented: MySensors, now possible to update S_INFO/V_TEXT directly from JSON udevice command
+- Implemented: Blockly, moved User Variables under devices
+- Implemented: Blockly, now possible to directly add/update Text devices
 
 Version 3.8153 (July 30th 2017)
 - Fixed: Camera Editor, will now always refresh thumbnail in table
